--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Unicorns",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^22.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
